# xtui

./: .gitignore  .sccignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md  cliff.toml  rustqual.toml
.claude/: settings.json
.ctx/: HANDOFF.xtui.xtui.yaml
.ctx/memory-bank/: active-context.md  mistakes.md  patterns.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
.githooks/: commit-msg  post-merge  post-push  pre-commit  pre-push  prepare-commit-msg
.github/workflows/: ci.yml  nightly.yml  promote-main.yml  promote-staging.yml  release.yml  tag.yml  tag.yml.disabled.yml
.kgx/wiki/entity/: commandsource.md
.kgx/wiki/summary/: dep-view-feature.md  xtui-architecture-summary.md  xtui-release-process.md
docs/plans/: 2026-06-07-xtui-impl.md  2026-06-07-xtui.md  2026-06-08-testing-strategy-impl.md  2026-06-08-testing-strategy.md  2026-06-08-xtui-v1.md  2026-06-09-dep-graph-view.md
scripts/: ci-promote.nu  dev-state.nu  session-init.nu  xstate.nu
src/: app.rs  bin_schema.rs  depview.rs  discover.rs  history.rs  lib.rs  main.rs  meta_cache.rs  meta_fetch.rs  pipeline.rs  registry.rs  runner.rs  search.rs  source.rs  status.rs  ui.rs
tests/: integration.rs  pre-push.nu  promote.nu  sources.rs
tests/common/: mod.rs
tests/fixtures/pre-push/: Cargo.toml
tests/fixtures/pre-push/xtask/src/: main.rs
xbook/: SUMMARY.md  book.toml  ci-workflow.md  copies.toml  intro.md  xREADME.md
xtask/: Cargo.toml  xREADME.md
xtask/src/: main.rs
