[package]
name = "xtui"
version = "0.2.0"
edition = "2024"
description = "TUI for discovering and running project commands (xtask, cargo, just, nu, npm, make, mise)"
license = "MIT OR Apache-2.0"
rust-version = "1.91"
repository = "https://github.com/89jobrien/xtui"
readme = "README.md"
keywords = ["tui", "cli", "cargo", "xtask", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
ansi-to-tui = "8"
anyhow = "1"
regex = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
krates = "0.17"
redb = "2"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
proptest = "1"
